# sailing_robot

./: .gitignore  README.md
apriltag_ros/apriltag_ros/config/: settings.yaml  tags.yaml
apriltag_ros/apriltag_ros/launch/: continuous_detection.launch  multi_apriltag_detect.launch  rs_apriltag_detect.launch  single_apriltag_detect.launch  three_apriltag_detect.launch
apriltag_ros/apriltag_ros/src/: common_functions.cpp  continuous_detector.cpp  single_image_detector.cpp
ball_detect/: CMakeLists.txt  package.xml
ball_detect/launch/: color_detection.launch  sim_gps.launch  simulate_video.launch  yolo_detection.launch
ball_detect/msg/: BoatAndBall.msg
ball_detect/src/: color_detect_node.cpp  simVideo.py  simulator_gps.cpp  yolo_detect_node.cpp
correction_receiver_ros/: CMakeLists.txt  package.xml
correction_receiver_ros/config/: correction_receiver_ros_params.yaml
correction_receiver_ros/include/correction_receiver_ros/: correction_receiver_ros.h  serial.hpp
correction_receiver_ros/launch/: correction_receiver_ros.launch
correction_receiver_ros/src/: correction_receiver_ros.cpp  correction_receiver_ros_node.cpp
darknet_ros/darknet/src/: image.c
darknet_ros/darknet_ros/config/: ros.yaml  yolov3-tiny.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch
darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
darknet_ros/darknet_ros_msgs/: CMakeLists.txt
darknet_ros/darknet_ros_msgs/msg/: FoundObject.msg
realsense2_camera/launch/: rs_camera.launch
sailing_robot/: CMakeLists.txt  package.xml  readme.txt
sailing_robot/launch/: Alinx.launch  Alinx_apriltag.launch  CMC.launch  apriltag_test.launch  area_scanning.launch  hide_and_seek.launch  repetition.launch  rosbag.launch  simulator.launch  simulator_tcp.launch  station_keeping.launch  test_rosbag.launch  to_waypoint.launch
sailing_robot/launch/parameters/: area_scanning.yaml  default.yaml  hide_and_seek.yaml  rudder_settings.yaml  rudder_settings_new.yaml  sail_settings.yaml  sail_settings_new.yaml  sailingClub_waypoints.yaml  simulation_waypoints.yaml  simulator.yaml  simulator_tcp.yaml  station_keeping.yaml  test.yaml  test2.yaml  to_waypoint.yaml
sailing_robot/launch/parameters_old/: sailingClub_waypoints.yaml
sailing_robot/scripts/: actuator_driver_rudder  actuator_driver_sail  client_tcp  debugging_2D_plot_matplot  dummy_position  force_jibe_tack  helming  nano_client  nano_serial  repetition_data_recv  repetition_matplot  ser.py  ser_ggps.py  ser_gps  tasks
sailing_robot/src/: expand_task_dict.py  make_tasks.py  station_keeping2.py
sailing_robot/src/sailing_robot/: area_scanning.py  expand_task_dict.py  heading_planning.py  heading_planning_laylines.py  heading_planning_laylines_closely.py  make_tasks.py  taskbase.py  (+11 more)
sailing_robot/tests/: test_LatLon.py
sailing_robot/utilities/: gen_waypoint.py  gen_waypoint_hide_and_seek.py  repetition_matplot.py  repetition_matplot_mac.py
usb_cam/launch/: multi_usb_cam.launch  multi_usb_cam_test.launch  noshow_multi_usb_cam.launch  noshow_single_usb_cam.launch  single_usb_cam.launch  usb_cam-test.launch
usb_cam/nodes/: usb_cam_node.cpp
(+15 files in other folders)
